--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,12 @@
   --background-end-rgb: 249, 250, 251;
 }
 
+.dark {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 17, 24, 39;
+  --background-end-rgb: 31, 41, 55;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
